--- a/ch07/src/main/webapp/ex07-class선택자.html
+++ b/ch07/src/main/webapp/ex07-class선택자.html
@@ -6,6 +6,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script>
+// 클래스 선택자는 .사용
 	$(function() {
 		setTimeout(function() {
 			$(".red").css("color", "red");
@@ -16,6 +17,7 @@
 
 </head>
 <body>
+	<h1>선택자 - Class</h1>
 	<ul>
 		<li class="red">텍스트 텍스트 텍스트 텍스트 텍스트</li>
 		<li class="blue">텍스트 텍스트 텍스트 텍스트 텍스트</li>
