--- a/ch07/src/main/webapp/ex10-그룹선택자.html
+++ b/ch07/src/main/webapp/ex10-그룹선택자.html
@@ -6,25 +6,22 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script>
-// 아이디에는 # 붙일 것
+	// 클래스 선택자는 .사용
 	$(function() {
 		setTimeout(function() {
-			$("#first").css("color", "red");
-			$("#second").css("color", "blue");
-			$("#third").css("color", "black");
-			$("#fourth").css("color", "green");
-		}, 2000);
+			$("#first, #third").css("font-weight", "bold");
+		}, 1000);
 	});
 </script>
+
 </head>
 <body>
-	<h1>선택자 - ID</h1>
+	<h1>선택자 - 그룹</h1>
 	<ul>
 		<li id="first">텍스트 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="second">텍스트 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="third">텍스트 텍스트 텍스트 텍스트 텍스트</li>
 		<li id="fourth">텍스트 텍스트 텍스트 텍스트 텍스트</li>
 	</ul>
-
 </body>
 </html>
