--- a/ch07/src/main/webapp/ex11-자식선택자.html
+++ b/ch07/src/main/webapp/ex11-자식선택자.html
@@ -6,21 +6,23 @@
 <script>
 	$(function() {
 		setTimeout(function() {
-			$("li:contains('샘플')").css("color", "red");
-			$("li:has('strong')").css("color", "blue");
+			$("li > strong").css("font-weight", "normal");
+			$("ul > li > div > strong").css("color", "blue");
 		}, 1000);
 	});
 </script>
 </head>
 <body>
-	<h1>선택자 - jQuery Filter(contains, has)</h1>
+	<h1>선택자 - 자식</h1>
 	<ul>
+		<li><strong> 텍스트</strong> 텍스트 텍스트 텍스트 텍스트</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 <strong>텍스트</strong> 텍스트 텍스트
+		<li>
+			<div>
+				<strong> 텍스트 </strong> 텍스트 텍스트 텍스트 텍스트 <span> 텍스트 </span>
+			</div>
 		</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>샘플12345</li>
 	</ul>
 </body>
 </html>
