--- a/ch07/src/main/webapp/ex12-인접선택자.html
+++ b/ch07/src/main/webapp/ex12-인접선택자.html
@@ -4,23 +4,21 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script>
-	$(function() {
-		setTimeout(function() {
-			$("li:contains('샘플')").css("color", "red");
-			$("li:has('strong')").css("color", "blue");
-		}, 1000);
-	});
+$(function(){
+	setTimeout(function(){
+		$("#second + li").css("color", "red");
+		$("#second + li + li").css("color", "blue");
+	}, 1000);
+});
 </script>
 </head>
 <body>
-	<h1>선택자 - jQuery Filter(contains, has)</h1>
+	<h1>선택자 - 인접(sibling, 형제)</h1>
 	<ul>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
+		<li id="second">텍스트 텍스트 텍스트 텍스트 텍스트</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>텍스트 텍스트 <strong>텍스트</strong> 텍스트 텍스트
-		</li>
 		<li>텍스트 텍스트 텍스트 텍스트 텍스트</li>
-		<li>샘플12345</li>
 	</ul>
 </body>
 </html>
