--- a/ch07/src/main/webapp/ex21.html
+++ b/ch07/src/main/webapp/ex21.html
@@ -8,15 +8,16 @@
 		setTimeout(function() {
 			$("#p1").html("<strong>1.안녕하세요</strong>");
 			console.log($("#p2").html());
-
 		}, 1000);
 	});
 </script>
 </head>
 <body>
-	<h1>DOM 조작 API - text()</h1>
+	<h1>DOM 조작 API - html()</h1>
 
 	<p id="p1">이 안에 HTML을 바꿉니다.</p>
-	<p id="p2"><strong>1.안녕하세요</strong></p>
+	<p id="p2">
+		<strong>1.안녕하세요</strong>
+	</p>
 </body>
 </html>
