--- a/ch07/src/main/webapp/ex27-appendTo().html
+++ b/ch07/src/main/webapp/ex27-appendTo().html
@@ -6,22 +6,14 @@
 <script>
 	$(function() {
 		setTimeout(function() {
-			$("h2, p")
-				.wrapAll("<div>")
-				.parent()
-				.css({
-					border: "2px solid #ccc",
-					padding: "10px",
-					width: "200px"
-				});
-		}, 2000);
+			$("#p2 strong").appendTo("#p1");
+		}, 1000);
 	});
 </script>
 </head>
 <body>
-	<h1>DOM 조작 API - wrapAll()</h1>
-
-	<h2>타이틀입니다.</h2>
-	<p>내용입니다.</p>
+	<h1>DOM 조작 API - appendTo()</h1>
+	<p id="p1">ABCD</p>
+	<p id="p2">abcd<strong>EFGHIJK...</strong></p>
 </body>
 </html>
