--- a/ch07/src/main/webapp/ex28-insertBefore().html
+++ b/ch07/src/main/webapp/ex28-insertBefore().html
@@ -6,22 +6,14 @@
 <script>
 	$(function() {
 		setTimeout(function() {
-			$("h2, p")
-				.wrapAll("<div>")
-				.parent()
-				.css({
-					border: "2px solid #ccc",
-					padding: "10px",
-					width: "200px"
-				});
-		}, 2000);
+			$("#h2").insertBefore("#p1");
+		}, 1000);
 	});
 </script>
 </head>
 <body>
-	<h1>DOM 조작 API - wrapAll()</h1>
-
-	<h2>타이틀입니다.</h2>
-	<p>내용입니다.</p>
+	<h1>DOM 조작 API - insertBefore()</h1>
+	<p id="p1">내용입니다.</p>
+	<h2 id="h2">제목입니다.</h2>
 </body>
 </html>
