--- a/ch07/src/main/webapp/ex36.html
+++ b/ch07/src/main/webapp/ex36.html
@@ -3,39 +3,22 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>sample1</title>
-<link href='image-viewer.css' type='text/css'/> 
-<script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
-<script type="text/javascript">
-
-var images = [ 
-	"국화:Chrysanthemum.jpg", 
-	"사막:Desert.jpg", 
-	"수국:Hydrangeas.jpg", 
-	"해파리:Jellyfish.jpg", 
-	"코알라:Koala.jpg", 
-	"등대:Lighthouse.jpg", 
-	"펭귄:Penguins.jpg", 
-	"툴립:Tulips.jpg" ];
-
-$(function(){
-
-	$("button").click(function(){
-		// 랜덤 변수 
-		var result = Math.floor( Math.random() * (images.length-1)  ) + 1;
-	});
-	
-});
+<link href='image-viewer.css' type='text/css' rel="stylesheet" />
+<script type="text/javascript" src="./jquery/jquery-3.6.0.js"></script>
+<script type="text/javascript" src="image-viewer.js"></script>
+<script>
+	imageViewer.init();
 </script>
 </head>
 <body>
-	<div class="buttons">
-		<button id="btn-change">이미지 변경</button>
-		<button id="btn-slide">슬라이드 쇼 시작</button>
-		
+	<div class="image-viewer">
+		<div class="buttons">
+			<button id="btn-change">이미지변경</button>
+			<button id="btn-slideshow">슬라이드쇼 시작</button>
+		</div>
+		<div>
+			<img />
+		</div>
 	</div>
-	<div>
-		<img src="images/Desert.jpg" alt="사막" />	
-	</div>
-		
 </body>
 </html>
