--- a/ch03/src/main/webapp/ex04.html
+++ b/ch03/src/main/webapp/ex04.html
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>Border</title>
 <style type="text/css">
+
 body {
 	font-family: "돋움", "맑은 고딕";
 	font-size: 0.8em;
@@ -11,32 +12,40 @@ body {
 	margin:0;
 	padding:0; 
 }
+
+/* 그룹 선택자 */
 .box1, .box2, .box3, .box4, .box5, .box6, .box7, .box8, .box9  {
 	margin:10px;
 	padding:10px;
 	width:300px;
 	background-color: #FFC;
 }
+
 .box1 {
 	border: 4px dashed;
 
 }
+
 .box2 {
 	border:4px dotted;
 
 }
+
 .box3 {
 	border:4px double;
 
 }
+
 .box4 {
 	border:4px groove;
 
 }
+
 .box5 {
 	border:4px  inset;
 
 }
+
 .box6 {
 	border:4px outset;
 
