--- a/ch03/src/main/webapp/ex01.html
+++ b/ch03/src/main/webapp/ex01.html
@@ -4,14 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>마진과 패딩</title>
 <style type="text/css">
-
 * { margin: 0; padding: 0 }
 body {
 	font-family: "돋움", "맑은 고딕";
 	font-size: 12px;
 	color: #333;
 }
-
 .box1 {
 	border:1px solid #666;
 	width:300px;
@@ -34,6 +32,7 @@ body {
 </style>
 <script>
 
+// 기본구조
 window.onload = function() {
 	// var 를 달면 함수범위, 아니면 전역범위
 	var elDiv = document.getElementById("box");
