--- a/ch03/src/main/webapp/ex10.html
+++ b/ch03/src/main/webapp/ex10.html
@@ -4,6 +4,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>float를 이용한 메뉴 </title>
 <style type="text/css">
+
+/* 그룹선택자 */
 ul.nothing, ul.something {
 	font-size: 12px;
 	color: #333;
