--- a/ch05/src/main/webapp/tabbox1.html
+++ b/ch05/src/main/webapp/tabbox1.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>리스트를 이용한 메뉴 만들기</title>
 <style type="text/css">
+
 *		{ margin:0; padding:0 }
 body	{ font-family: '맑은 고딕' 돋움; font-size:0.75em; color:#333 }
 ul, ol	{ list-style-type: none }
@@ -42,9 +43,15 @@ ul, ol	{ list-style-type: none }
 }
 </style>
 <script>
+
 // DOM Level 1 Event 처리: HTML element의 event 속성에 자바스크립트 코드를 사용하는 방법
 // 1) HTML Tag에 바로 적용하기
+
+// liSelected 변수 설정
 var liSelected = null;
+
+// onTabClicked 변수를 만들고, 그 안에 함수(li)를 집어넣음
+// 해당 event 속성에 자바스크립트 코드를 사용
 var onTabClicked = function(li) {
 	li.className = 'selected';  // selected
 	if(liSelected != null) {    // unselected
@@ -53,6 +60,7 @@ var onTabClicked = function(li) {
 	
 	liSelected = li;
 }
+
 </script>
 </head>
 <body>
