--- a/ch06/src/main/webapp/ex01.html
+++ b/ch06/src/main/webapp/ex01.html
@@ -16,18 +16,30 @@ console.log(s);
 
 // 팝업창
 setTimeout(function(){
+	// popup.html으로 띄워진 팝업챙의 내용을 popup으로 전환
 	var popup = window.open("popup.html", "popup", "width=300, height=200");
 	setTimeout(function(){
         // popup(자식창)의 내용 바꾸기
         // 보안 문제(Cross Domain) 때문에 같은 도메인에서만 가능하다.
+        // 2초 후 팝업 창이 뜨고, 그 후 다시 1초가 지나면 popup text changed 문자 출력
 		popup.document.write("<h1>popup text changed</h1>")
 	}, 1000);
 	
 	setTimeout(function(){
-        // popup(자식창)의 JavaScrpit 실행
-        // 보안 문제(Cross Domain) 때문에 같은 도메인에서만 가능하다.
-		popup.message
-	}, 1000);
+		// popup(자식창)의 JavaScript 실행
+		// 보안 문제(Cross Domain) 때문에 같은 도메인에서만 가능하다. 
+		popup.message();
+	}, 4000);
+	
+	setTimeout(function(){
+		// popup(자식창) 위치 이동
+		popup.moveTo(200, 200);
+	}, 6000);
+	
+	setTimeout(function(){
+		// popup(자식창) 위치 이동
+		popup.moveTo(400, 400);
+	}, 8000);
 	
 }, 2000);
 
