--- a/ch06/src/main/webapp/ex06-HTML Element 추가1.html
+++ b/ch06/src/main/webapp/ex06-HTML Element 추가1.html
@@ -6,12 +6,16 @@
 <script src='browser-detect.js' type="text/javascript"></script>
 <script>
 window.addEventListener("load", function(){
-	var html = "<h3>Hello World</h3>"
+	var h3Element = document.createElement("h3");
+	var textNode = document.createTextNode("Hello DOM");
+	
+	// append 사용
+	// h3 태그에 Hello DOM append
+	h3Element.append(textNode);
 	
 	// 비주얼적인 효과, 필수적인거 아님.
 	setTimeout(function(){
-		// document.body.innerHTML = html; // body부분이 전부 날아가고, 얘로 대체됨.
-		document.body.innerHTML += html; // body부분 아래에 html을 추가
+		document.body.appendChild(h3Element);
 	}, 2000);
 });
 </script>
