--- a/ch06/src/main/webapp/ex16.html
+++ b/ch06/src/main/webapp/ex16.html
@@ -9,14 +9,20 @@
 /*
 Event Propagatation(Event Bubbling)
 특정 이벤트가 발생했을 때 그 이벤트가 상위/하위 엘리먼트로 전파되어 가는 것
-<= IE8: outer-div > inner-div > header > text
+<= IE8: outer-div => inner-div => header => text
 */
 
+// 문서 요소의 load 이벤트는 document 객체에서 버블링이 중지되고 window 객체로 전파되지 않는다.
+// 이벤트 전파 단계
+// 1. 캡처링
+// 2. 타깃 객체의 이벤트 핸들러 호출
+// 3. 이벤트 버블링
 window.addEventListener("load", function(){
+	
 	document
 		.getElementById('outer-div')
 		.addEventListener('click', function(){
-			console.log('아우터 디브~')	;	
+			console.log('아우터 디브');
 	});
 	
 	document
@@ -38,9 +44,9 @@ window.addEventListener("load", function(){
 	});
 	
 	document
-		.getElementById('text')
-		.addEventListener('click', function(){
-			console.log('텍스트');
+	.getElementById('text')
+	.addEventListener('click', function(){
+		console.log('텍스트');
 	});
 });
 
