--- a/ch06/src/main/webapp/ex14-event_model_level0.html
+++ b/ch06/src/main/webapp/ex14-event_model_level0.html
@@ -15,21 +15,21 @@
 window.addEventListener("load", function(){
 	var form = document.getElementById("form-login");
 	
-	form.onsubmit = function(){
-		var inputEmail = document.getElementById("input-email").value;
-		if(inputEmail==''){
+	form.onsubmit = function() {
+		var inputEmail = document.getElementById("input-email");
+		if(inputEmail.value == '') {
 			alert('이메일이 Beer 있습니다.');
 			inputEmail.focus();
 			return false;
 		}
-		
-		var inputPassword = document.getElementById("input-email").value;
-		if(inputemail==''){
+
+		var inputPassword = document.getElementById("input-password");
+		if(inputPassword.value == '') {
 			alert('비밀번호가 Beer 있습니다.');
 			inputPassword.focus();
 			return false;
 		}
-		
+
 		return true;
 	}
 });
