--- a/ch07/src/main/webapp/ex08-하위선택자.html
+++ b/ch07/src/main/webapp/ex08-하위선택자.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script>
 	// 클래스 선택자는 .사용
+	// 클래스 밑에 strong 사용
 	$(function() {
 		setTimeout(function() {
 			$(".red strong").css({
