--- a/ch07/src/main/webapp/ex09-전체선택자.html
+++ b/ch07/src/main/webapp/ex09-전체선택자.html
@@ -7,6 +7,7 @@
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script>
 	// 클래스 선택자는 .사용
+	// *을 사용해서 li 밑의 전부 다
 	$(function() {
 		setTimeout(function() {
 			$("li *").css("font-weight", "bold");
