--- a/ch07/src/main/webapp/ex02.html
+++ b/ch07/src/main/webapp/ex02.html
@@ -10,15 +10,17 @@
 	// 유사 배열!!
 
 	// 1. DOM이 로딩된 시점1 : DOM API를 사용
+	// window는 전역 객체
 	window.addEventListener('load', function() {
 		var $obj = $("#header");
+		
+		console.log($obj);
 		// 절대 jQuery 객체는 null이 아님(유사배열이므로, 비어있을 수는 있다.)
 		// 유사배열이지만, 엄밀히 배열은 아니므로 배열적인 slice나 splice같은 것은 쓸 수 없다.
 		// id가 하나이므로 1로 설정
 		if ($obj.length == 1) {
 			console.log("성공 : " + $obj[0]);
 		}
-
 	});
 
 	// 2. DOM이 로딩된 시점 : jQuery 함수를 사용하는 방법1
@@ -36,6 +38,7 @@
 			console.log("성공");
 		}
 	});
+	
 </script>
 </head>
 <body>
