--- a/ch07/src/main/webapp/ex13-첫번째자식.html
+++ b/ch07/src/main/webapp/ex13-첫번째자식.html
@@ -4,12 +4,18 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <script type="text/javascript" src="jquery/jquery-3.6.0.js"></script>
 <script>
-	$(function() {
-		setTimeout(function() {
-			$("ul li:first-child").css("color", "red");
-			$("ul li:last-child").css("color", "blue");
-		}, 1000);
-	});
+$(function() {
+	setTimeout(function() {
+		$("ul li:first-child").css("color", "red");
+		$("ul li:last-child").css("color", "blue");
+	}, 1000);
+	
+	setTimeout(function() {
+		$("ul li:first-child").css("color", "green");
+		$("ul li:last-child").css("color", "yellow");
+	}, 3000);
+});
+
 </script>
 </head>
 <body>
