--- a/ch06/src/main/webapp/ex16.html
+++ b/ch06/src/main/webapp/ex16.html
@@ -15,7 +15,7 @@ Event Propagatation(Event Bubbling)
 // 문서 요소의 load 이벤트는 document 객체에서 버블링이 중지되고 window 객체로 전파되지 않는다.
 // 이벤트 전파 단계
 // 1. 캡처링
-// 2. 타깃 객체의 이벤트 핸들러 호출
+// 2. 타깃 객체의 이벤트 핸들러 / 리스너 호출
 // 3. 이벤트 버블링
 window.addEventListener("load", function(){
 	
@@ -29,7 +29,6 @@ window.addEventListener("load", function(){
 		.getElementById('inner-div')
 		.addEventListener('click', function(e){
 			var event = e || window.event /* <= ie8 */ // e가 널이 아니라면
-			
 			// prevent event's propagation(bubbling)
 			event.cancelBubble = true; /* <= ie8 */
 			event.stopPropagation && event.stopPropagation(); /* standard other browser */
